syntax = "proto3";

package DirectMessages;

message Message{
	string messageContent = 1;
	string messageDateTime = 2;
	string messageSenderName = 3;
	string messageAligment = 4;
	string messageSenderStatus = 5;
}